# STM32-Boot

./: .gitignore  CMakeLists.txt  Makefile  README.md  startup_stm32.c  stm32g4.ld  stm_blinky.c  stm_blinky.h
.github/workflows/: buid.yml  ci.yml  main.yml  style.yml
cli/app/: cli_app.c  cli_cal.c  cli_helper.c  cli_sample.c
cli/base/: FreeRTOS_CLI.c  FreeRTOS_CLI.h
drivers/i2c/: stm_i2c.c  stm_i2c.h
drivers/uart/: stm32_uart.c  stm32_uart.h  stm_uart.c  stm_uart.h  stm_uart_ll.c  stm_uart_ll.h
freertos/: FreeRTOSConfig.h  port.c
includes/: blinky_abs.h  stm_blinky.h  stm_reg_access.h
samples/: blinky_abs.c  i2c_sample.c  stm_blinky.c  stm_samples.c
sources/: blinky_abs.c  console.c  main.c  startup_stm32.c  stm_blinky.c
tests/: freertos_tests.c  freertos_tests.h
tests/freertos/: freertos_tests.c  freertos_tests.h  mutex_tests.c  print_number_tests.c  queue_tests.c  semaphore_tests.c
tools/: launch.json  uncrustify.cfg
